# literature-reader

./: .gitignore  README.md  main.py  pyproject.toml  setup.sh
Literature/: bruno.json  search.bru
app/: __init__.py  search.py
app/md/prompts/: language_finder.md  language_narrower.md  prompt_read.py  reference_verify.md  search.md  topic.md  translator.md
app/utilities/: __init__.py
log/log/: full-log.md
log/log_1/: full-log.md
log/log_1/language_finder/: 213615-892_213617-539.md
log/log_1/language_narrower/: 213617-558_213618-125.md
log/log_2/: full-log.md
log/log_2/language_finder/: 213740-752_213743-137.md
log/log_2/language_narrower/: 213743-150_213743-700.md
